--- a/custom.scss
+++ b/custom.scss
@@ -4,10 +4,6 @@ $body-bg: #fff;
 
 /*-- scss:rules --*/
 
-.reveal .dark * {
-  color:white;
-} 
-
 .image-source {
   text-align: right;
   font-size:12pt;
@@ -32,10 +28,18 @@ h3 {
   padding-top: 50px;
 }
 
+.highlight1, .highlight2 {
+  font-weight: bold;
+}
+
 .highlight1 {
   color:#E0001E;
 }
 
 .highlight2 {
   color:#008F85;
+}
+
+.slide.single-point h2 {
+  padding-top:120px;
 }
