Final presentation (hopefully)

--- a/custom.scss
+++ b/custom.scss
@@ -43,3 +43,13 @@ h3 {
 .slide.single-point h2 {
   padding-top:120px;
 }
+
+.qrcode {
+  position:absolute;
+  right: 0;
+  bottom:150px;
+}
+
+.lower h1 {
+  padding-top:200px;
+}
